RESOLVED FIXED304132
[GStreamer] imported/w3c/web-platform-tests/webaudio/the-audio-api/the-audioworklet-interface/audioworkletprocessor-promises.https.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=304132
Summary [GStreamer] imported/w3c/web-platform-tests/webaudio/the-audio-api/the-audiow...
Claudio Saavedra
Reported 2025-12-13 11:33:09 PST
Crashes very rarely, but the stacktrace is pretty self-explanatory: Thread 1 (Thread 0x7f0976ffd6c0 (LWP 1157710)): #0 0x00007f0c753a51b3 in WebCore::AudioDestinationGStreamer::notifyIsPlaying (this=0x0, isPlaying=true) at ../../../Source/WebCore/platform/audio/gstreamer/AudioDestinationGStreamer.cpp:317 #1 0x00007f0c753b3486 in webKitWebAudioSrcRenderAndPushFrames (element=..., buffer=...) at ../../../Source/WebCore/platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:346 #2 0x00007f0c753b37a8 in operator() (__closure=0x7f0949fd1008) at ../../../Source/WebCore/platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:398 #3 0x00007f0c753dc8b4 in WTF::Detail::CallableWrapper<webKitWebAudioSrcRenderIteration(WebKitWebAudioSrc*)::<lambda()>, void>::call(void) (this=0x7f0949fd1000) at WTF/Headers/wtf/Function.h:59 #4 0x00007f0c6c2b1aeb in WTF::Function<void ()>::operator()() const (this=0x7f0949eccdf8) at WTF/Headers/wtf/Function.h:103 #5 0x00007f0c7264df18 in operator() (__closure=0x7f0949eccdf8) at ../../../Source/WebCore/Modules/webaudio/DefaultAudioDestinationNode.cpp:159 #6 0x00007f0c7265cb56 in WTF::Detail::CallableWrapper<WebCore::DefaultAudioDestinationNode::dispatchToRenderThreadFunction()::<lambda(WTF::Function<void()>&&)>::<lambda(WebCore::ScriptExecutionContext&)>, void, WebCore::ScriptExecutionContext&>::call(WebCore::ScriptExecutionContext &) (this=0x7f0949eccdf0, in#0=...) at WTF/Headers/wtf/Function.h:59 #7 0x00007f0c71dbfd03 in WTF::Function<void (WebCore::ScriptExecutionContext&)>::operator()(WebCore::ScriptExecutionContext&) const (this=0x7f0949fd1020, in#0=...) at WTF/Headers/wtf/Function.h:103 #8 0x00007f0c727859f3 in WebCore::ScriptExecutionContext::Task::performTask (this=0x7f0949fd1020, context=...) at ../../../Source/WebCore/dom/ScriptExecutionContext.h:274 #9 0x00007f0c76bf7dc7 in WebCore::WorkerDedicatedRunLoop::Task::performTask (this=0x7f0949fd1020, context=0x7f09499866c0) at ../../../Source/WebCore/workers/WorkerRunLoop.cpp:411 #10 0x00007f0c76bf764f in WebCore::WorkerDedicatedRunLoop::runInMode (this=0x7f0949f50e40, context=0x7f09499866c0, predicate=...) at ../../../Source/WebCore/workers/WorkerRunLoop.cpp:327 #11 0x00007f0c76bf6bee in WebCore::WorkerDedicatedRunLoop::run (this=0x7f0949f50e40, context=0x7f09499866c0) at ../../../Source/WebCore/workers/WorkerRunLoop.cpp:220 #12 0x00007f0c76bf48c3 in WebCore::WorkerOrWorkletThread::runEventLoop (this=0x7f0949f38b80) at ../../../Source/WebCore/workers/WorkerOrWorkletThread.cpp:110 #13 0x00007f0c76bf4dd5 in WebCore::WorkerOrWorkletThread::workerOrWorkletThread (this=0x7f0949f38b80) at ../../../Source/WebCore/workers/WorkerOrWorkletThread.cpp:184 #14 0x00007f0c7261acb6 in operator() (__closure=0x7f0949f4cf48) at ../../../Source/WebCore/Modules/webaudio/AudioWorkletThread.cpp:77 #15 0x00007f0c7264a4dc in WTF::Detail::CallableWrapper<WebCore::AudioWorkletThread::createThread()::<lambda()>, void>::call(void) (this=0x7f0949f4cf40) at WTF/Headers/wtf/Function.h:59 #16 0x00007f0c5ad161dd in WTF::Function<void ()>::operator()() const (this=0x7f0976ffc6f8) at WTF/Headers/wtf/Function.h:103 #17 0x00007f0c5ca00b53 in WTF::Thread::entryPoint (newThreadContext=0x7f0949f50ea0) at ../../../Source/WTF/wtf/Threading.cpp:260 #18 0x00007f0c5cae5909 in WTF::wtfThreadEntryPoint (context=0x7f0949f50ea0) at ../../../Source/WTF/wtf/posix/ThreadingPOSIX.cpp:245 #19 0x00007f0c5e08aaa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447 #20 0x00007f0c5e117c6c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
Attachments
Claudio Saavedra
Comment 1 2025-12-13 11:49:38 PST
Philippe Normand
Comment 2 2025-12-14 02:33:47 PST
EWS
Comment 3 2025-12-15 02:59:51 PST
Committed 304449@main (cfa781ae8897): <https://commits.webkit.org/304449@main> Reviewed commits have been landed. Closing PR #55375 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2025-12-15 03:00:14 PST
Note You need to log in before you can comment on or make changes to this bug.