[GStreamer] imported/w3c/web-platform-tests/webaudio/the-audio-api/the-audioworklet-interface/audioworkletprocessor-promises.https.html is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=304132

Reviewed by Xabier Rodriguez-Calvar.

The webaudiosrc now uses a weak reference to the AudioDestination instead of a raw pointer. I used
the opportunity to refactor some code and get rid of superfluous GObject properties.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/audio/gstreamer/AudioDestinationGStreamer.cpp:
(WebCore::AudioDestinationGStreamer::~AudioDestinationGStreamer):
(WebCore::AudioDestinationGStreamer::initializePipeline):
* Source/WebCore/platform/audio/gstreamer/AudioDestinationGStreamer.h:
(WebCore::AudioDestinationGStreamer::renderBus const):
* Source/WebCore/platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:
(webkit_web_audio_src_class_init):
(webKitWebAudioSrcConstructed):
(webKitWebAudioSrcAllocateBuffer):
(webKitWebAudioSrcRenderAndPushFrames):
(webKitWebAudioSrcChangeState):
(webkitWebAudioSourceSetDestination):
(webKitWebAudioSrcSetProperty): Deleted.
(webKitWebAudioSrcGetProperty): Deleted.
(webkitWebAudioSourceSetBus): Deleted.
* Source/WebCore/platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.h:

Canonical link: https://commits.webkit.org/304449@main